# ApricotsNG

./: .gitignore  CMakeLists.txt  README.md  README.old.md
cmake/: FindSDL2.cmake
docs/: apricots_ng.js  apricots_ng.wasm  index.html
src/: CMakeLists.txt  SDLfont.cpp  SDLfont.h  apricots.h  drawall.cpp  finish.cpp  game.cpp  init.cpp  sampleio.cpp  sampleio.h  shape.cpp  shape.h
